updated config and updated the single trainer function.

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,10 +1,7 @@
 name: CI_test_pipeline1
 on:
-  pull_request_target:
-    branches:
-      - JWOC
-    types:
-      - opened
+  pull_request:
+    branches: '*'
 jobs:
   run:
     runs-on: ubuntu-latest
