--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,7 @@ dmypy.json
 best_model.pkl
 feature_engineered_dataframe.csv
 processed_dataframe.csv
+
+# for checking results
+results.py
+results.json
